# pycx2

./: .editorconfig  .gitignore  README-ID.md  README.md  setup.cfg  setup.py
.github/: dependabot.yml  mergify.yml
.github/workflows/: prs-cache-clean.yml  publish-package.yml
pycx2/: __main__.py  cli.py  compile.py
