[metadata]
name = pycx2
version = 1.0.0
author = Rangga Fajar Oktariansyah
author_email = fajarrkim@gmail.com
description = Compiler Python version 2 source file to binary
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/FajarKim/pycx2
license = AGPL-3.0
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2 :: Only
    Programming Language :: Python :: 2.7
    Operating System :: OS Independent
    Topic :: Software Development :: Compilers
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Documentation = https://github.com/FajarKim/pycx2#readme
    Donate = https://buymeacoffee.com/fajarkim
    Source Code = https://github.com/FajarKim/pycx2
    Bug Tracker = https://github.com/FajarKim/pycx2/issues

[options]
python_requires = ==2.7.*
packages = find:
install_requires =
    Cython>=0.29.34

[options.entry_points]
console_scripts =
    pycx2 = pycx2.cli:compile
